TP-214 refactor(ParceiroNegocio): melhora os testes da service ParceiroNegocio